# theow

./: CHANGELOG.md  README.md  pyproject.toml  release-please-config.json  tox.ini
.github/workflows/: ci.yml  release.yml
spec/: pilot.md  sdtools.md
src/theow/: __init__.py  _version.py  tools.py
src/theow/_core/: __init__.py  _chroma_store.py  _decorators.py  _engine.py  _explorer.py  _logging.py  _models.py  _prompts.py  _resolver.py  _session_cache.py  _stats.py  _tools.py
src/theow/_daemon/: __init__.py
src/theow/_gateway/: __init__.py  _anthropic.py  _base.py  _copilot.py  _gemini.py
tests/: conftest.py
tests/core/: test_chroma_store.py  test_decorators.py  test_logging.py  test_models.py  test_resolver.py  test_session_cache.py  test_stats.py  test_tools.py
tests/gateway/: test_anthropic.py  test_copilot.py  test_factory.py  test_gemini.py
